--- a/MCS/Dialogs/ExtendedMessageBox.xaml
+++ b/MCS/Dialogs/ExtendedMessageBox.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ExtendedMessageBox" Height="Auto" Width="Auto" SizeToContent="WidthAndHeight" 
-        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" >
+        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True"
+        KeyDown="ExtendedMessageBox_KeyDown">
     
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
@@ -37,11 +38,11 @@
             <Button Content="{Binding Path=YesButtonText}" Grid.Column="1" Margin="10,10,5,10" Padding="5" MinWidth="88" Command="{Binding Path=YesButtonCommand}"/>
             <Button Content="Yes To All" Grid.Column="2" Margin="5,10" Padding="5" MinWidth="88" Command="{Binding Path=YesToAllButtonCommand}"
                     Visibility="{Binding Path=IsYesToAllButtonVisible, Converter={StaticResource BoolToVis}}"/>
-            <Button Content="No" Grid.Column="3" Margin="5,10" Padding="5" MinWidth="88" Command="{Binding Path=NoButtonCommand}"
+            <Button Content="_No" Grid.Column="3" Margin="5,10" Padding="5" MinWidth="88" Command="{Binding Path=NoButtonCommand}"
                     Visibility="{Binding Path=IsNoButtonVisible, Converter={StaticResource BoolToVis}}"/>
             <Button Content="No To All" Grid.Column="4" Margin="5,10" Padding="5" MinWidth="88" Command="{Binding Path=NoToAllButtonCommand}"
                     Visibility="{Binding Path=IsNoToAllButtonVisible, Converter={StaticResource BoolToVis}}"/>
-            <Button Content="Cancel" Grid.Column="5" Margin="5,10,10,10" Padding="5" MinWidth="88" Command="{Binding Path=CancelButtonCommand}"
+            <Button Content="_Cancel" Grid.Column="5" Margin="5,10,10,10" Padding="5" MinWidth="88" Command="{Binding Path=CancelButtonCommand}"
                     Visibility="{Binding Path=IsCancelButtonVisible, Converter={StaticResource BoolToVis}}"/>
             
         </Grid>
