--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -2,14 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="clr-namespace:MCS.Controls"
-        Title="Content Borwser" Width="640" Height="480" Icon="/Images/MainWindow/Contents.PNG">
+        Title="Content Borwser" Width="640" Height="480" Icon="/Images/MainWindow/Contents.PNG"
+        Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <!-- Path Tree -->
@@ -64,9 +65,9 @@
             </Grid>
             
             <!-- Content List -->
-            <ListView Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionMode="Extended" AllowDrop="True"
-                     ItemsSource="{Binding Path=Contents}" SelectionChanged="ListView_SelectionChanged" Drop="ListView_Drop">
-
+            <ListView Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionMode="Extended" AllowDrop="True" 
+                      ItemsSource="{Binding Path=Contents}" SelectionChanged="ListView_SelectionChanged" Drop="ListView_Drop">
+                
                 <ListView.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Clone" Command="{Binding Path=CloneElementCommand}"/>
@@ -78,7 +79,7 @@
                         <MenuItem Header="Export" Command="{Binding Path=ExportElementCommand}"/>
                         <MenuItem Header="Export To Package" Command="{Binding Path=ExportToPackageElementCommand}"/>
                         <Separator/>
-                        <MenuItem Header="Add Material"/>
+                        <MenuItem Header="Add Material" Command="{Binding Path=AddElementCommand}" CommandParameter="Material"/>
                         <MenuItem Header="Add UI Screen"/>
                         <MenuItem Header="Add Skeleton"/>
                         <MenuItem Header="Add Sound"/>
@@ -113,7 +114,7 @@
               Width="2"/>
 
         <!-- Properties -->
-        <mc:PropertyGrid Grid.Column="4" Object="{Binding Path=SelectedElement}"/>
+        <mc:PropertyGrid Grid.Column="4" Object="{Binding Path=SelectedElement}" GetList="{Binding Path=GetSelectedContentElementsList}" Changed="PropertyGrid_Changed"/>
         
     </Grid>
 </Window>
