--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -46,7 +46,7 @@
             </ToolBar>
             <ToolBar Band="1" BandIndex="2" IsManipulationEnabled="True">
                 <RadioButton GroupName="Cursors" ToolTip="Select" Command="{Binding Path=CursorChangedCommand}" CommandParameter="Select" IsChecked="True">
-                    <Image Source="/Images/MainWindow/Cursor.png" Style="{StaticResource toolbarButtonImageStyle}"/>
+                    <Image Source="/Images/MainWindow/SelectCursor.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </RadioButton>
                 <RadioButton GroupName="Cursors" ToolTip="Move" Command="{Binding Path=CursorChangedCommand}" CommandParameter="Move" >
                     <Image Source="/Images/MainWindow/MoveCursor.png" Style="{StaticResource toolbarButtonImageStyle}"/>
@@ -72,7 +72,7 @@
                 <Button ToolTip="{Binding Path=EnvironmentWindowCommandTooltip}" Command="{Binding Path=EnvironmentWindowCommand}">
                     <Image Source="/Images/MainWindow/Environment.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
-                <Button ToolTip="Layers (Ctrl+L)">
+                <Button ToolTip="{Binding Path=LayersWindowCommandTooltip}" Command="{Binding Path=LayersWindowCommand}">
                     <Image Source="/Images/MainWindow/Layers.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
                 <Button ToolTip="Animations (Ctrl+A)">
@@ -98,7 +98,7 @@
                     <Image Source="/Images/MainWindow/Profiling.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
                 <Button ToolTip="Play/Stop (F5)">
-                    <Image Source="/Images/MainWindow/Play.png" Style="{StaticResource toolbarButtonImageStyle}"/>
+                    <Image Source="/Images/Common/Play.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
             </ToolBar>
         </ToolBarTray>
