--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -57,10 +57,10 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 
-                <Image Grid.Column="0" Source="/Images/ContentWindow/Search.png" Width="20" Margin="1"/>
+                <Image Grid.Column="0" Source="/Images/Common/Search.png" Width="20" Margin="1"/>
                 <TextBox Grid.Column="1" Margin="1" Text="{Binding Path=Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Button Grid.Column="2" Margin="3,1" Command="{Binding Path=ClearFilterCommand}">
-                    <Image Source="/Images/ContentWindow/Clear.png" Width="15"/>
+                    <Image Source="/Images/Common/Clear.png" Width="15"/>
                 </Button>
             </Grid>
             
