--- a/MCS/MainWindows/LayersWindow.xaml
+++ b/MCS/MainWindows/LayersWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Layers Editor" Width="200" Height="300" Icon="/Images/MainWindow/Layers.PNG"
-        WindowStyle="ToolWindow" Topmost="True">    
+        WindowStyle="ToolWindow" Topmost="True"
+        Closing="Window_Closing">    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
