--- a/MCS/MainWindows/FindWindow.xaml
+++ b/MCS/MainWindows/FindWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Find" Width="640" Height="480" Icon="/Images/MainWindow/Find.PNG"
-        WindowStyle="ToolWindow" Topmost="True">
+        WindowStyle="ToolWindow" Topmost="True"
+        Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
