--- a/MCS/MainWindows/EnvironmentWindow.xaml
+++ b/MCS/MainWindows/EnvironmentWindow.xaml
@@ -11,12 +11,17 @@
             <mc:PropertyGridItem Object="{Binding Path=AmbientLight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </GroupBox>
 
-        <GroupBox Header="Fog (0.000)">
+        <GroupBox Header="{Binding Path=FogDensity}" HeaderStringFormat="Fog {0:F3}">
             <StackPanel Orientation="Vertical">
                 <mc:PropertyGridItem Object="{Binding Path=FogColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Slider Value="{Binding Path=FogDensity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="3"
                         Margin="5" Maximum="0.1" TickFrequency="0.01" TickPlacement="TopLeft" SmallChange="0.001" LargeChange="0.01"/>
             </StackPanel>
+        </GroupBox>
+
+        <GroupBox Header="{Binding Path=TimeOfDay}" HeaderStringFormat="Time Of Day {0:F1}">
+            <Slider Value="{Binding Path=TimeOfDay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="3"
+                    Margin="5" Maximum="23.9" TickFrequency="3" TickPlacement="TopLeft" SmallChange="0.1" LargeChange="1.0"/>
         </GroupBox>
         
     </StackPanel>
