--- a/MCS/MainWindows/RenderWindow.xaml
+++ b/MCS/MainWindows/RenderWindow.xaml
@@ -1,8 +1,54 @@
 ﻿<Window x:Class="MCS.MainWindows.RenderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Render" Width="640" Height="480">
+        xmlns:mc="clr-namespace:MCS.Controls"
+        Title="Render" Width="640" Height="480"
+        MouseMove="Window_MouseMove" MouseWheel="Window_MouseWheel">
+
+    <Window.Resources>
+        <Style x:Key="toolbarButtonImageStyle" TargetType="Image">
+            <Setter Property="Width" Value="18"/>
+            <Setter Property="Height" Value="17"/>
+            <Setter Property="Stretch" Value="Fill"/>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="200"/>
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Row="1" Grid.Column="0" Background="Black">
+            <Image Name="bufferImage" Source="{Binding Path=Buffer}" ClipToBounds="False" RenderTransformOrigin="0.5,0.5">
+                <Image.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Image.RenderTransform>
+            </Image>
+        </Border>
+
+        <ToolBarTray Grid.Row="0" Grid.Column="0">
+            <ToolBar>
+                <Label Content="Renderer:"/>
+                <ComboBox ItemsSource="{Binding Path=RendererTypes}" SelectedItem="{Binding Path=SelectedRendererType}"/>
+                <Separator/>
+                <Label Content="Buffers:"/>
+                <ComboBox ItemsSource="{Binding Path=BuffersNames}" SelectedItem="{Binding Path=SelectedBufferName}"/>
+                <Separator/>
+                <Button ToolTip="Render" Command="{Binding Path=RenderWindowCommand}">
+                    <Image Source="/Images/MainWindow/Render.png" Style="{StaticResource toolbarButtonImageStyle}"/>
+                </Button>
+            </ToolBar>
+        </ToolBarTray>
+
+        <mc:PropertyGrid Object="{Binding Path=RenderSettings}" Expanded="True" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"/>
+
     </Grid>
 </Window>
