--- a/MCS/MainWindows/RenderWindow.xaml
+++ b/MCS/MainWindows/RenderWindow.xaml
@@ -23,7 +23,7 @@
             <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="1" Grid.Column="0" Background="Black">
+        <Border Grid.Row="1" Grid.Column="0" Background="DarkGray" ClipToBounds="True">
             <Image Name="bufferImage" Source="{Binding Path=Buffer}" ClipToBounds="False" RenderTransformOrigin="0.5,0.5">
                 <Image.RenderTransform>
                     <TransformGroup>
