--- a/MCS/MainWindows/RenderWindow.xaml
+++ b/MCS/MainWindows/RenderWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="clr-namespace:MCS.Controls"
-        Title="Render" Width="640" Height="480"
+        Title="Render" Width="640" Height="480" Icon="/Images/MainWindow/Render.PNG"
         MouseMove="Window_MouseMove" MouseWheel="Window_MouseWheel" MouseDoubleClick="Window_MouseDoubleClick">
 
     <Window.Resources>
@@ -24,7 +24,7 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Row="1" Grid.Column="0" Background="DarkGray" ClipToBounds="True">
-            <Image Name="bufferImage" Source="{Binding Path=Buffer}" ClipToBounds="False" RenderTransformOrigin="0.5,0.5">
+            <Image Name="bufferImage" Source="{Binding Path=Buffer}" ClipToBounds="False" RenderTransformOrigin="0.5,0.5" RenderOptions.BitmapScalingMode="NearestNeighbor">
                 <Image.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -37,10 +37,10 @@
         <ToolBarTray Grid.Row="0" Grid.Column="0">
             <ToolBar>
                 <Label Content="Renderer:"/>
-                <ComboBox ItemsSource="{Binding Path=RendererTypes}" SelectedItem="{Binding Path=SelectedRendererType}"/>
+                <ComboBox ItemsSource="{Binding Path=RendererTypes}" SelectedItem="{Binding Path=SelectedRendererType}" MinWidth="120"/>
                 <Separator/>
                 <Label Content="Buffers:"/>
-                <ComboBox ItemsSource="{Binding Path=BuffersNames}" SelectedItem="{Binding Path=SelectedBufferName}"/>
+                <ComboBox ItemsSource="{Binding Path=BuffersNames}" SelectedItem="{Binding Path=SelectedBufferName}" MinWidth="100"/>
                 <Separator/>
                 <Button ToolTip="{Binding Path=RenderCommandTooltip}" Command="{Binding Path=RenderCommand}">
                     <Image Source="/Images/MainWindow/Render.png" Style="{StaticResource toolbarButtonImageStyle}"/>
