--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -114,7 +114,8 @@
                     <Separator/>
                     <MenuItem Header="Add Camera" Command="{Binding Path=AddElementCommand}" CommandParameter="Camera"/>
                     <MenuItem Header="Add Light" Command="{Binding Path=AddElementCommand}" CommandParameter="Light"/>
-                    <MenuItem Header="Add Object"/>
+                    <MenuItem Header="Add Static Object" StaysOpenOnClick="True"/>
+                    <MenuItem Header="Add Dynamic Object" StaysOpenOnClick="True"/>
                     <MenuItem Header="Add Water"/>
                     <MenuItem Header="Add Character"/>
                 </ContextMenu>
