--- a/MCS/MainWindows/EnvironmentWindow.xaml
+++ b/MCS/MainWindows/EnvironmentWindow.xaml
@@ -1,19 +1,19 @@
 ﻿<Window x:Class="MCS.MainWindows.EnvironmentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="clr-namespace:MCS.Controls"
+        xmlns:mcs="clr-namespace:MCS.Controls"
         Title="Environment" Width="190" Height="Auto" Icon="/Images/MainWindow/Environment.PNG"
         WindowStyle="ToolWindow" Topmost="True" SizeToContent="Height">
 
     <StackPanel Orientation="Vertical">
 
         <GroupBox Header="AmbientLight">
-            <mc:PropertyGridItem Object="{Binding Path=AmbientLight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <mcs:PropertyGridItem Object="{Binding Path=AmbientLight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </GroupBox>
 
         <GroupBox Header="{Binding Path=FogDensity}" HeaderStringFormat="Fog {0:F3}">
             <StackPanel Orientation="Vertical">
-                <mc:PropertyGridItem Object="{Binding Path=FogColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <mcs:PropertyGridItem Object="{Binding Path=FogColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Slider Value="{Binding Path=FogDensity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="3"
                         Margin="5" Maximum="0.1" TickFrequency="0.01" TickPlacement="TopLeft" SmallChange="0.001" LargeChange="0.01"/>
             </StackPanel>
@@ -25,7 +25,7 @@
         </GroupBox>
 
         <GroupBox Header="SkyBox">
-            <mc:PropertyGridItem Object="{Binding Path=SkyBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" GetList="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=GetSelectedContentElementsList}"/>
+            <mcs:PropertyGridItem Object="{Binding Path=SkyBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" GetList="{Binding GetSelectedContentElementsList}"/>
         </GroupBox>
         
     </StackPanel>
