--- a/MCS/MainWindows/LayersWindow.xaml
+++ b/MCS/MainWindows/LayersWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindows.LayersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Layers Editor" Width="200" Height="300" Icon="/Images/MainWindow/Layers.PNG"
+        Title="Layers Manager" Width="200" Height="300" Icon="/Images/MainWindow/Layers.PNG"
         WindowStyle="ToolWindow" Topmost="True"
         Closing="Window_Closing">    
     <Grid>
