--- a/MCS/MainWindows/RenderWindow.xaml
+++ b/MCS/MainWindows/RenderWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindows.RenderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="clr-namespace:MCS.Controls"
+        xmlns:mcs="clr-namespace:MCS.Controls"
         Title="Render" Width="640" Height="480" Icon="/Images/MainWindow/Render.PNG"
         MouseMove="Window_MouseMove" MouseWheel="Window_MouseWheel" MouseDoubleClick="Window_MouseDoubleClick">
 
@@ -58,7 +58,7 @@
             </ToolBar>
         </ToolBarTray>
 
-        <mc:PropertyGrid Object="{Binding Path=RenderSettings}" Expanded="True" Grid.Row="0" Grid.RowSpan="2"  Grid.Column="1"/>
+        <mcs:PropertyGrid Object="{Binding Path=RenderSettings}" Expanded="True" Grid.Row="0" Grid.RowSpan="2"  Grid.Column="1"/>
 
     </Grid>
 </Window>
