--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -97,9 +97,22 @@
                 <Button ToolTip="Profiling (Ctrl+P)">
                     <Image Source="/Images/MainWindow/Profiling.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
-                <Button ToolTip="Play/Stop (F5)">
-                    <Image Source="/Images/Common/Play.png" Style="{StaticResource toolbarButtonImageStyle}"/>
-                </Button>
+                <ToggleButton ToolTip="{Binding Path=PlayStopCommandTooltip}" IsChecked="{Binding IsEngineStarted}">
+                    <Image>
+                        <Image.Style>
+                            <Style TargetType="{x:Type Image}" BasedOn="{StaticResource toolbarButtonImageStyle}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="True">
+                                        <Setter Property="Source" Value="/Images/Common/Stop.png"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="False">
+                                        <Setter Property="Source" Value="/Images/Common/Play.png"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Image.Style>
+                    </Image>
+                </ToggleButton>
             </ToolBar>
         </ToolBarTray>
 
