--- a/MCS/MainWindows/AnimationsWindow.xaml
+++ b/MCS/MainWindows/AnimationsWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mcs="clr-namespace:MCS.Controls"
         Title="Animation Maker" Width="640" Height="480" Icon="/Images/MainWindow/Animations.png"
-        KeyDown="Window_KeyDown">
+        KeyDown="Window_KeyDown" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -24,7 +24,7 @@
               ShowsPreview="true"
               Width="2"/>
 
-        <mcs:GraphsViewer Grid.Column="2" Grid.Row="0" Data="{Binding Curves}" CursorPosition="{Binding CurrentFrame, Mode=TwoWay}" SelectedCurve="{Binding SelectedCurve, Mode=TwoWay}"
+        <mcs:GraphsViewer Grid.Column="2" Grid.Row="0" Data="{Binding Curves}" Linear="{Binding IsLinear}" CursorPosition="{Binding CurrentFrame, Mode=TwoWay}" SelectedCurve="{Binding SelectedCurve, Mode=TwoWay}"
                           MouseDown="GraphsViewer_MouseDown" MouseMove="GraphsViewer_MouseMove" MouseWheel="GraphsViewer_MouseWheel"/>
 
         <StatusBar Grid.Column="0" Grid.Row="1">
@@ -51,14 +51,40 @@
                 <Image Source="/Images/Common/Delete.png" Width="18" Height="17" Stretch="Fill"/>
             </Button>
             <Separator Margin="36 0 0 0"/>
-            <Button ToolTip="Play (Ctrl+P)">
-                <Image Source="/Images/Common/Play.png" Width="18" Height="17" Stretch="Fill"/>
-            </Button>
-            <Button ToolTip="Stop (Ctrl+S)">
-                <Image Source="/Images/Common/Stop.png" Width="18" Height="17" Stretch="Fill"/>
-            </Button>
-            <ToggleButton ToolTip="Loop">
-                <Image Source="/Images/Common/New.png" Width="18" Height="17" Stretch="Fill"/>
+            <ToggleButton ToolTip="Play/Stop" IsChecked="{Binding IsPlaying}">
+                <Image Width="18" Height="17" Stretch="Fill">
+                    <Image.Style>
+                        <Style TargetType="{x:Type Image}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="True">
+                                    <Setter Property="Source" Value="/Images/Common/Stop.png"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="False">
+                                    <Setter Property="Source" Value="/Images/Common/Play.png"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+            </ToggleButton>
+            <ToggleButton ToolTip="Loop" IsChecked="{Binding IsLooping}">
+                <Image Source="/Images/AnimationWindow/Loop.png" Width="18" Height="17" Stretch="Fill"/>
+            </ToggleButton>
+            <ToggleButton ToolTip="Linear/Bezier" IsChecked="{Binding IsLinear}">
+                <Image Width="18" Height="17" Stretch="Fill">
+                    <Image.Style>
+                        <Style TargetType="{x:Type Image}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="True">
+                                    <Setter Property="Source" Value="/Images/AnimationWindow/linear.png"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ToggleButton}}, Path=IsChecked}" Value="False">
+                                    <Setter Property="Source" Value="/Images/AnimationWindow/bezier.png"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
             </ToggleButton>
             <Separator/>
             <TextBlock Text="Speed:"/>
